<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Splash Screen -->
	<string name="red_cake">red_cake</string>
	<string name="green_cake">green_cake</string>
	
	<!--  Main Menu -->
    <string name="app_name">SweetSeeker</string>
    <string name="action_settings">Settings</string>
    <string name="splash_description">Game Logo</string>
    <string name="title_activity_game">Game</string>
    <string name="title_activity_option">Option</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_splash">Sweet Seeker</string>
    <string name="title_activity_menu">Menu</string>
    <string name="text_Leon">Leon Su</string>
    <string name="text_Ray">Raymond Leung</string>
    <string name="button_text_Skip">Skip</string>
    
    <!-- Options -->
    <string name="setting">Settings</string>
   	<string name="board_size">Board Size</string>
   	<string name="three_by_four">3X4</string>
   	<string name="four_by_six">4X6</string>
   	<string name="six_by_ten">6X10</string>
   	<string name="mine_size">Mine Size</string>
   	<string name="six">6</string>
	<string name="ten">10</string>
	<string name="fifteen">15</string>
	<string name="twenty">20</string>
	<string name="reset">Reset</string>
	<string name="count">Times this application has been run:</string>
	
	<!-- Game -->
	
	
	<!-- Help -->
	<string name="CMPT276_hyperlink"><a href="http://www.cs.sfu.ca/CourseCentral/276/bfraser/">CMPT276</a></string>
	<string name="instructions">
	\n1. Click on any button to try to find some desert.\n2. 
	If the button has a desert then a desert will be revealed\n3. 
	If the button does not have a desert then a number will be reavealed.\n4. 
	The number refers to the number of deserts hidden in the same row and cloumn as the button you clicked on.\n5. 
	You may click on a revealed desert again to get the number of deserts in the same row and column as well.\n6. 
	Try to use the least amount of tries, so you can eat because you are hungry!</string>
	<string name="authors"> By Leon Su and Raymond Leung.</string>
	<string name="cake_picture">cake picture</string>
	<string name="candles_picture">candles_picture</string>
	<string name="source">Sources : </string>
	<string name="source0"><a href="https://iconfinder.com">iconfinder</a></string>
	<string name="source1"><a href="http://wallpaper.mob.org">wallpaper.mob</a></string>

</resources>
