<ScrollView
  	xmlns:android="http://schemas.android.com/apk/res/android"
  	xmlns:tools="http://schemas.android.com/tools"
  	android:background = "@drawable/background5"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent">

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".OptionActivity" >
    
    <TextView
        android:id="@+id/setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/setting"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/setting"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/game_board_size"
            android:layout_width="wrap_content"
            android:layout_height="0dip"
            android:layout_weight="0.72"
            android:gravity="center_horizontal"
            android:text="@string/board_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/board_size_selections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/board_size_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/three_by_four" />

            <RadioButton
                android:id="@+id/board_size_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/four_by_six" />

            <RadioButton
                android:id="@+id/board_size_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/six_by_ten" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/board"
        android:layout_toRightOf="@+id/setting"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/mine_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/mine_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/mine_size_selections"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="0.72" >

            <RadioButton
                android:id="@+id/mine_size_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/six" 
                android:enabled="true"/>

            <RadioButton
                android:id="@+id/mine_size_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/ten" 
                android:enabled="true"/>

            <RadioButton
                android:id="@+id/mine_size_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/fifteen" 
                android:enabled="false"/>

            <RadioButton
                android:id="@+id/mine_size_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/twenty" 
                android:enabled="false"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/board"
        android:layout_below="@+id/run_count"
        android:layout_marginTop="35dp"
        android:padding="0dip"
        android:text="@string/reset" />

    <TextView
        android:id="@+id/run_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reset"
        android:layout_below="@+id/mine"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
	</RelativeLayout>
</ScrollView>