<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background = "@drawable/background3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity" >

    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="100dp"  
		android:layout_height="100dp"  
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/splash_description"
        android:src="@drawable/ic_launcher" />

    <ImageView
        android:id="@+id/redCake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/LogoImage"
        android:layout_below="@+id/LogoImage"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/cake_8" android:contentDescription="@string/red_cake"/>

    <TextView
        android:id="@+id/textRay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/redCake"
        android:layout_below="@+id/redCake"
        android:text="@string/text_Ray"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textLeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textRay"
        android:layout_below="@+id/textRay"
        android:text="@string/text_Leon"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/greenCake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textRay"
        android:layout_alignRight="@+id/LogoImage"
        android:layout_marginRight="63dp"
        android:contentDescription="@string/green_cake"
        android:src="@drawable/cake_11" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/LogoImage"
        android:layout_below="@+id/textLeon"
        android:text="@string/button_text_Skip" />

</RelativeLayout>