<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background = "@drawable/background6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <LinearLayout
        android:id="@+id/MainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:orientation="vertical" >

        <Button
            android:id="@+id/play"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_game" />

        <Button
            android:id="@+id/config"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_option" />

        <Button
            android:id="@+id/help"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_help" />
    </LinearLayout>

    <TextView
        android:id="@+id/textMineSeeker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="30sp" />

</RelativeLayout>